Added UVI colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     
             </div>
             <div class ="day-cast"><h3>5-Day Forecast:</h3></div>
-            <div id="forecast-container" class="forecast d-flex justify-content-between">
+            <div id="forecast-container" class="flex-wrap flex-sm-nowrap forecast d-flex justify-content-around">
                 
             </div>
         </div>
